syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "Common.proto";

option java_multiple_files = true;
option java_package = "com.leaf.common.grpc";
option java_outer_classname = "UserProfile";

service UserProfileGrpcService {
    rpc createUserProfile(UserProfileDTO) returns (UserProfileDTO);
    rpc getUserProfile(UserProfileIdRequest) returns (UserProfileResponse);
}

message UserProfileDTO {
    string userId = 1;
    string fullname = 2;
}

message UserProfileIdRequest {
    string userId = 1;
}

message UserProfileResponse {
    string userId = 1;
    string fullname = 2;
    google.protobuf.Timestamp createdDate = 3;
    string avatarUrl = 4;
    string coverUrl = 5;
    google.protobuf.Timestamp lastOnlineAt = 6;
    int64 followersCount = 7;
    int64 followingCount = 8;
    string id = 9;
    string bio = 10;
}
